hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_net_protocol.inp
print net protocol [ http ]
print net pr

quit
